<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    first line      -->

    <Button
        android:id="@+id/button_ac"
        style="@style/CalculatorButtonStyle.WithMarginRight"
        android:layout_width="0dp"
        android:layout_height="82dp"
        android:text="@string/ac"
        app:layout_constraintEnd_toStartOf="@id/button_plus_minus"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/button_plus_minus"
        style="@style/CalculatorButtonStyle.WithMarginRight"
        android:layout_width="0dp"
        android:layout_height="82dp"
        android:text="@string/plus_minus"
        app:layout_constraintEnd_toStartOf="@id/button_percent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_ac"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/button_percent"
        style="@style/CalculatorButtonStyle.WithMarginRight"
        android:layout_width="0dp"
        android:layout_height="82dp"
        android:text="@string/percent"
        app:layout_constraintEnd_toStartOf="@id/button_divide"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_plus_minus"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/button_divide"
        style="@style/CalculatorButtonStyle.Accent"
        android:layout_width="0dp"
        android:layout_height="82dp"
        android:text="@string/divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_percent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--    second line      -->

    <Button
        android:id="@+id/button_seven"
        style="@style/CalculatorButtonStyle.WithMarginRight"
        android:layout_width="0dp"
        android:layout_height="82dp"
        android:text="@string/seven"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_eight"
        app:layout_constraintTop_toBottomOf="@id/button_ac"
        />

    <Button
        android:id="@+id/button_eight"
        android:layout_width="0dp"
        android:layout_height="82dp"
        style="@style/CalculatorButtonStyle.WithMarginRight"
        android:text="@string/eight"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_seven"
        app:layout_constraintEnd_toStartOf="@id/button_nine"
        app:layout_constraintTop_toBottomOf="@id/button_plus_minus"
        />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="0dp"
        android:layout_height="82dp"
        style="@style/CalculatorButtonStyle.WithMarginRight"
        android:text="@string/nine"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_eight"
        app:layout_constraintEnd_toStartOf="@id/button_multiplication"
        app:layout_constraintTop_toBottomOf="@id/button_percent"
        />

    <Button
        android:id="@+id/button_multiplication"
        android:layout_width="0dp"
        android:layout_height="82dp"
        style="@style/CalculatorButtonStyle.Accent"
        android:text="@string/multiplication"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_divide"
        />

    <!--    third line         -->

    <Button
        android:id="@+id/button_four"
        android:layout_width="0dp"
        android:layout_height="82dp"
        style="@style/CalculatorButtonStyle.WithMarginRight"
        android:text="@string/four"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_five"
        app:layout_constraintTop_toBottomOf="@id/button_seven"
        />

    <Button
        android:id="@+id/button_five"
        android:layout_width="0dp"
        android:layout_height="82dp"
        style="@style/CalculatorButtonStyle.WithMarginRight"
        android:text="@string/five"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_four"
        app:layout_constraintEnd_toStartOf="@id/button_six"
        app:layout_constraintTop_toBottomOf="@id/button_eight"
        />

    <Button
        android:id="@+id/button_six"
        android:layout_width="0dp"
        android:layout_height="82dp"
        style="@style/CalculatorButtonStyle.WithMarginRight"
        android:text="@string/six"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_five"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        app:layout_constraintTop_toBottomOf="@id/button_nine"
        />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="0dp"
        android:layout_height="82dp"
        style="@style/CalculatorButtonStyle.Accent"
        android:text="@string/minus"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_multiplication"
        />

    <!--    forth line      -->

    <Button
        android:id="@+id/button_one"
        android:layout_width="0dp"
        android:layout_height="82dp"
        style="@style/CalculatorButtonStyle.WithMarginRight"
        android:text="@string/one"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_two"
        app:layout_constraintTop_toBottomOf="@id/button_four"
        />

    <Button
        android:id="@+id/button_two"
        android:layout_width="0dp"
        android:layout_height="82dp"
        style="@style/CalculatorButtonStyle.WithMarginRight"
        android:text="@string/two"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_one"
        app:layout_constraintEnd_toStartOf="@id/button_three"
        app:layout_constraintTop_toBottomOf="@id/button_five"
        />

    <Button
        android:id="@+id/button_three"
        android:layout_width="0dp"
        android:layout_height="82dp"
        style="@style/CalculatorButtonStyle.WithMarginRight"
        android:text="@string/three"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_two"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintTop_toBottomOf="@id/button_six"
        />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="0dp"
        android:layout_height="82dp"
        style="@style/CalculatorButtonStyle.Accent"
        android:text="@string/plus"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_minus"
        />

    <!--    last line      -->

    <Button
        android:id="@+id/button_zero"
        android:layout_width="0dp"
        android:layout_height="82dp"
        style="@style/CalculatorButtonStyle.WithMarginRight"
        android:text="@string/zero"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_comma"
        app:layout_constraintTop_toBottomOf="@id/button_one"
        />

    <Button
        android:id="@+id/button_comma"
        android:layout_width="0dp"
        android:layout_height="82dp"
        style="@style/CalculatorButtonStyle.WithMarginRight"
        android:text="@string/comma"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_zero"
        app:layout_constraintEnd_toStartOf="@id/button_equal"
        app:layout_constraintTop_toBottomOf="@id/button_two"
        />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="0dp"
        android:layout_height="82dp"
        style="@style/CalculatorButtonStyle.Accent"
        android:text="@string/equal"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_comma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_three"
        />

</androidx.constraintlayout.widget.ConstraintLayout>